@@ -1,14 +1,16 @@
 begin_unit
 begin_package
-DECL|package|org.apache.solr.analysis
+DECL|package|org.apache.lucene.analysis.charfilter
 package|package
 name|org
 operator|.
 name|apache
 operator|.
-name|solr
+name|lucene
 operator|.
 name|analysis
+operator|.
+name|charfilter
 package|;
 end_package
 begin_comment
@@ -48,6 +50,24 @@ operator|.
 name|io
 operator|.
 name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStream
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStreamReader
 import|;
 end_import
 begin_import
@@ -302,6 +322,17 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|InputStream
+name|stream
+init|=
+name|getClass
+argument_list|()
+operator|.
+name|getResourceAsStream
+argument_list|(
+literal|"htmlStripReaderTest.html"
+argument_list|)
+decl_stmt|;
 name|HTMLStripCharFilter
 name|reader
 init|=
@@ -313,13 +344,11 @@ operator|.
 name|get
 argument_list|(
 operator|new
-name|FileReader
+name|InputStreamReader
 argument_list|(
-operator|new
-name|File
-argument_list|(
-literal|"htmlStripReaderTest.html"
-argument_list|)
+name|stream
+argument_list|,
+literal|"UTF-8"
 argument_list|)
 argument_list|)
 argument_list|)
